[project]
name = "use-cases-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.11",
    "openai>=1.79.0",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]
